app/assets/stylesheets/gto/gto-mixins.scss
@import 'mau-mixins';

.gto-list {
  ul {
    padding-left: 20px;
  }
  li {
    list-style: circle;
  }
}
@mixin card-description {
  .desc {
    padding: 6px;
    border-radius: 3px;
    @include bottom-label-overlay;
    @include transition(opacity 0.25s ease-in-out);
    width: calc(100% - 40px);
    margin: 0 20px 20px;
    font-size: 0.8rem;
    text-align: center;
    @include box-shadow(0 0 4px 1px rgba($gto_teal, 0.3));
  }
}

@mixin artist-thumb-mixin {
  position: relative;
  min-height: 300px;
  text-align:center;
  padding: 10px;
  margin-bottom: 6px;
  .image {
    overflow:hidden;
    width: 100%;
    height: 280px;
    @include background-cover;
    @include round-corners(3px);
  }
  &:hover {
    /** @include box-shadow(0 0 1px 1px rgba(200,200,200,0.5)); */
  }
  @include card-description
}

@mixin search-filter {
  .filter {
    margin-top: -14px;
    border-bottom: none;
    .fa {
      font-size: 1.2rem;
      &:hover {
        color: $gto_dark_teal;
      }

    }
    input[type=text] {
      background-color: transparent;
      padding: 5px;
      margin-left: 5px;
      border: none;
      font-size: 1.2rem;
      @include transition( width 0.25s ease-in-out );
      font-weight: $font-weight-light;
    }
  }
  @media screen and (min-width: $screen-md-max) {
    .filter {
      border-bottom: 1px solid $xlightgray;
      margin-top: 22px;
      margin-left: -20px;
      padding-left: 20px;
      padding-bottom: 4px;
    }
  }
    
}
@mixin section-header {
  padding-bottom: 4px;
  padding-left: 1px;
  text-transform: uppercase;
  font-size: 0.8rem;
  margin-bottom: 8px;
  border-bottom: 1px solid $xlightgray;
  @include ellipsis;
}

@mixin popup-elements {
  font-size: 0.9rem;
  .popup-text {
    padding: 0 15px 15px;
  }
  .popup-close {
    position: absolute;
    right: 15px;
    top: 10px;
    width: 15px;
    text-align: center;
  }

  .popup-header {
    text-transform: uppercase;
    line-height: 1.5em;
    font-weight: $font-weight-normal;
    padding: 10px 15px 4px;
    margin-bottom: 12px;
    position: relative;
    border-bottom: 1px solid $xlightgray;
  }
  .popup-text {
    line-height: 1.1rem;
    font-size:0.8rem;
  }
}

